# cosmos-data-platform

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  SUMMARY.md  docker-compose.yml  down.sh  pyproject.toml  up.sh
.github/workflows/: ci.yml
apps/management_api/: README.md  requirements-dev.txt  requirements.txt
apps/management_api/alembic/: env.py
apps/management_api/app/: main.py
apps/management_api/tests/: conftest.py  test_api_flow.py  test_dataset_execution.py  test_rbac.py  test_schema_validation.py  test_stage_templates.py  test_versioning.py  test_video_dataset_stages.py  test_xenna_adapter.py
apps/web/: README.md  package-lock.json  package.json  tsconfig.json
cosmos_xenna/pipelines/v1/: dataset_stage.py
cosmos_xenna/ray_utils/: cluster.py
deploy/compose/: .env.example  docker-compose.yml
deploy/docker/: management_api.Dockerfile  web.Dockerfile
deployment/: .env.example
deployment/compose/: docker-compose.ray-local.yml  docker-compose.yml
deployment/docker/: Dockerfile.api  Dockerfile.runtime  Dockerfile.web  requirements.runtime.txt
deployment/k8s/app/: api.yaml  configmap.yaml  namespace.yaml  postgres.yaml  redis.yaml  runtime.yaml  secret.yaml  (+1 more)
deployment/scripts/: build.sh  check-image-size.sh  down.sh  e2e.sh  k8s-deploy.sh  k8s-smoke.sh  logs.sh  runtime_worker.py  smoke.sh  smoke_test.py  up.sh
docs/: ONE_PAGER.md  deployment.md
docs/management-plane/: README.md  architecture.md  auth-rbac.md  observability.md  pipeline-spec-schema.md  troubleshooting.md
scripts/: e2e_test.sh  loc.py
(+63 files in other folders)
