[project]
name = "pipelineforge-platform"
version = "0.2.0"
description = "PipelineForge management API and web console"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["apps/management_api/tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203", "E741"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"
include = ["apps/management_api/app"]

reportOptionalCall = false
reportOptionalIterable = false
reportOptionalMemberAccess = false
reportOptionalOperand = false
reportOptionalSubscript = false
reportMissingModuleSource = false
